--- a/style.scss
+++ b/style.scss
@@ -4,3 +4,51 @@
   margin: 0;
   padding: 0;
 }
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+canvas {
+  width: 100%;
+  max-width: 100vw;
+  max-height: 100vh;
+  object-fit: contain;
+}
+
+button {
+  background-color: white;
+  border: 1px solid #ccc;
+  outline: none;
+  border-radius: 5px;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  cursor: pointer;
+  box-shadow: none;
+
+  &:focus, &:hover {
+    background-color: #eee;
+    border: 1px solid #999;
+  }
+}
+
+.container {
+  position: relative;
+  width: 100%;
+  max-width: 100vw;
+  max-height: 100vh;
+}
+
+.controls {
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
+  display: flex;
+  flex-direction: column;
+
+  #save {
+    margin-bottom: 1rem;
+  }
+}
