--- a/style.scss
+++ b/style.scss
@@ -13,7 +13,7 @@ body {
 
 canvas {
   width: 100%;
-  max-width: 100vw;
+  max-width: min(100vw, 1200px);
   max-height: 100vh;
   object-fit: contain;
 }
@@ -39,6 +39,9 @@ button {
   width: 100%;
   max-width: 100vw;
   max-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .controls {
