--- a/style.scss
+++ b/style.scss
@@ -19,18 +19,21 @@ canvas {
 }
 
 button {
-  background-color: white;
-  border: 1px solid #ccc;
-  outline: none;
-  border-radius: 5px;
-  padding: 0.5rem 1rem;
-  font-size: 1rem;
-  cursor: pointer;
+  padding: 1rem 2rem;
+  border-radius: 24px;
+  outline: 0;
+  border: 0;
   box-shadow: none;
+  background-color: #ddd;
+  cursor: pointer;
+  transition: background-color 0.1s;
 
   &:focus, &:hover {
-    background-color: #eee;
-    border: 1px solid #999;
+    background-color: #ccc;
+  }
+
+  &:active {
+    background-color: #bbb;
   }
 }
 
@@ -54,4 +57,37 @@ button {
   #save {
     margin-bottom: 1rem;
   }
+}
+
+#backdrop {
+  z-index: 1;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: #0003;
+}
+
+#message {
+  z-index: 2;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  width: fit-content;
+  max-width: 95%;
+  padding: 3rem;
+  border-radius: 24px;
+}
+
+#enable {
+  width: fit-content;
+  display: block;
+  margin: 2rem auto;
+}
+
+.hide {
+  display: none;
 }
