--- a/style.scss
+++ b/style.scss
@@ -69,7 +69,7 @@ button {
   background-color: #0003;
 }
 
-#message {
+#modal {
   z-index: 2;
   position: absolute;
   top: 50%;
@@ -80,12 +80,17 @@ button {
   max-width: 95%;
   padding: 3rem;
   border-radius: 24px;
-}
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
-#enable {
-  width: fit-content;
-  display: block;
-  margin: 2rem auto;
+  p {
+    margin-bottom: 2rem;
+  }
+
+  button {
+    margin-top: 1rem;
+  }
 }
 
 .hide {
