--- a/style.scss
+++ b/style.scss
@@ -66,6 +66,10 @@ button {
   flex-direction: column;
   align-items: center;
 
+  h2 {
+    margin-bottom: 2rem;
+  }
+
   p {
     margin-bottom: 2rem;
   }
